--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,231 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Wed May 26 2010 Chris Lumens <clumens@redhat.com> - 14.6-1
+- Set repository in kickstart harddrive command (#592239) (rvykydal)
+- nm-c-e integration: fix some leftovers from patch porting. (rvykydal)
+- Add missing logging import to installinterfacebase (hdegoede)
+- Give pre-existing mdraid arrays the proper name in the UI (#596227)
+  (hdegoede)
+- Add nm-c-e translations to stage 2 (#594982) (rvykydal)
+- set the resolution with resolution= from the cmdline (#594918). (akozumpl)
+- cleanup: gui.py never uses runres for anything, off it goes. (akozumpl)
+- Skip the bootloader placement window if we're on UEFI (#582143) (pjones)
+- Add some more stuff to .bash_history (pjones)
+- Support cio_ignore functionality for zFCP devices (#533492) (dcantrell)
+- Add missing newline for 'nfs' line in ks file (#591479) (dcantrell)
+- Correct problem with initrd.addrsize generation (#546422) (dcantrell)
+- Fix rescue mode startup with kickstart file and without (#515896) (msivak)
+- More checkbot fixes. (clumens)
+- fix: traceback in check_memory() (#595284). (akozumpl)
+- Drop init questions from cmdline.py (hdegoede)
+- Move init questions to InstallInterfaceBase (hdegoede)
+- Make re-init all inconsistent lvm mean re-init all instead of ignore all
+  (hdegoede)
+- Read cciss devices correctly from 'multipath -d' output (#559507) (dcantrell)
+- On NFS installs, look for product.img and updates.img under images/
+  (#594811). (clumens)
+- Remove yum cache for anaconda's temporary repos (#593649). (clumens)
+- Use correct NM dbus interfaces (#594716) (rvykydal)
+- Change the configuration of depmod and link modules to better place (#593941)
+  (msivak)
+- Make ssid and wepkey in boot params and stage 1 kickstart work (#473803)
+  (rvykydal)
+- logging: remove addLogger() (akozumpl)
+- iutil: execWithCallback() and execWithPulseProgress() return an object.
+  (akozumpl)
+- logging: simplify stdout logging in execWithCallback(). (akozumpl)
+- logging: use stderr parameter in execWithCallback(). (akozumpl)
+- logging: remove addSysLogHandler() (akozumpl)
+- analog: handle a config file we can't open. (akozumpl)
+- clearer error messages for missing iscsi initiator name (hdegoede)
+- fedora is part of iSCSI initiator name (#594659) (hdegoede)
+- Add default iSCSI initiator name in rescue mode (#594434) (hdegoede)
+- Do not allow editing of extended partitions (#593754) (hdegoede)
+- Check for sane mountpoint in raid dialog (#592185) (bcl)
+- Check for sane mountpoint in lvm dialog (#592185) (bcl)
+- Check for sane mountpoint in partition dialog (#592185) (bcl)
+- Cleaned up sanityCheckMountPoint (bcl)
+- Don't autostep past the end of the install screens (#593556) (bcl)
+- Add missing rpm macros file to get rid of the rpm warnings (msivak)
+- Add the rpmrc file to the initrd.img (#508242) (mgracik)
+- fix: syntax error in gui.py from 9e69c5f36f79410d9df1502fe69f02f4d06173ab.
+  (akozumpl)
+- Keep track of pvcount for non existing vgs (#593871) (hdegoede)
+- Improve module cleanup in our TestCase class and fix issues in FS mock class.
+  (msivak)
+- Don't drop encryption when re-editing new encrypted partitions. (#582888)
+  (dlehman)
+- Return disk to prior state following failed partition removal. (#580088)
+  (dlehman)
+- Display unpartitioned disks in main partitioning gui. (#588637) (dlehman)
+- Pick up mountpoint for existing formats on encrypted LVs. (#587002) (dlehman)
+- Automatic partitioning should yield no more than one PReP partition.
+  (dlehman)
+- Pass short type names for PartSpec ctor. (dlehman)
+- Setting up lvs should never fail (hdegoede)
+- We no longer need to handle lvs which are part of an incomplete vg (hdegoede)
+- Don't clear immutable devices (#593642) (hdegoede)
+- Store immutable info into the device for easier access (hdegoede)
+- Reset vg blacklist when initializing storage (hdegoede)
+- Handle vgs with duplicate names (#591469) (hdegoede)
+- Delay setting up lvs until other devices are scanned (hdegoede)
+- anaconda udev rules should not get lvm info based in volgroup name (hdegoede)
+- Move creation of lv devices into its own function (hdegoede)
+- livecd: window icon (#583333). (akozumpl)
+- FcoeDiskDevice.dracutSetupString(): use the right dracut syntax (#486244)
+  (hdegoede)
+- improve the memory checking so it reflects better the hungry architectures.
+  (akozumpl)
+- logging: fix SIGSEGV when trying to log after closeLog() is called.
+  (akozumpl)
+- Updates to scripts/makebumpver. (dcantrell)
+- Suppress failures to tear down /dev/loop devices (#591829) (bcl)
+- Fix the order of arguments in archive read callback and archive closing.
+  (msivak)
+- Use "kernel-modules = version" style for locating rpms providing driver
+  updates (msivak)
+- Move depmod configuration into new directory structure to get rid of depmod
+  warning (#508242) (msivak)
+- Fix descriptor leak and iteration progress in driverdisc code (#592225)
+  (msivak)
+- Add lsof command to initrd.img (mgracik)
+- Add hmac file for sshd (#592186) (mgracik)
+- Enable fips mode after fips mode installation (#592188) (mgracik)
+- Add nslookup to the install.img (#591064) (mgracik)
+- Add the chk files for libraries to the install.img (#590701) (mgracik)
+- Add the eject command to the install.img (#591070) (mgracik)
+- Add hmac file for libgcrypt to install.img (#590701) (mgracik)
+- Don't remove *.hmac files when creating install images (mgracik)
+- Added clear command to the install.img (#586499) (mgracik)
+- Added chvt to the install.img (#575844) (mgracik)
+- Only install non-branded anaconda icon on liveinst arches (dcantrell)
+- Fix of typo. (rvykydal)
+- Fix two minor errors found by checkbot. (clumens)
+- Fix bad patches reordering (#473803) (rvykydal)
+- scripts/analog: normalize paths before generating the config. (akozumpl)
+- gui: "_use anyway" mnemonic. (akozumpl)
+- logging: give loglevels for the shortened names. (akozumpl)
+- logging: remove references to the 'bootloaderadvanced' step. (akozumpl)
+- logging: remove references to some more steps. (akozumpl)
+- Move importing of tested modules into setUp methods (msivak)
+- Add Mock classes (msivak)
+- gui, autopart: don't let a too verbose translation ruin all teh fun
+  (#591955). (akozumpl)
+- Update po/POTFILES.in for nm-connection-editor integration. (dcantrell)
+- Fix typo in loader/nfsinstall.c (dcantrell)
+- Add the best package for this arch to the optional package selector
+  (#591653). (clumens)
+- Swap server and opts on the split() call (#591479) (dcantrell)
+- Handle devices that don't have a /dev/disk/by-path/ symlink (#563242)
+  (pjones)
+- Make sure we write out multipath.conf before discovery (#563242) (pjones)
+- Handle >2 way /sbin/multipath output better (#563242) (pjones)
+- Look for updates.img and product.img on NFS installs. (clumens)
+- And add a menu to the right hand side so you can see the new column.
+  (clumens)
+- Don't ask if we have ESSID specified by kickstart or stage 1 (#473803)
+  (rvykydal)
+- Make ks option network --wepkey work in stage 2 (#473803) (rvykydal)
+- Add support for wireless configuration using nm-c-e in stage 2 (#473803)
+  (rvykydal)
+- Write out ifcfg files only when necessary (#520146) (rvykydal)
+- Use separate method for copying network configuration to system (#520146).
+  (rvykydal)
+- Network: remove functions that are not used anymore (#520146) (rvykydal)
+- Wait for specific activated network devices (#520146). (rvykydal)
+- Set network devices configured in ks to be nm-controlled (#520146).
+  (rvykydal)
+- Remove no longer needed devices argument from Network.write() (#520146)
+  (rvykydal)
+- Actually generate contents of 70-persistent-net.rules (#520146) (rvykydal)
+- Disable [Configure Network] button if there are no net devs (#520146)
+  (rvykydal)
+- Add net device description into selection dialog (#520146) (rvykydal)
+- Check preselected install network device as nm-controlled (#520146)
+  (rvykydal)
+- Don't ask when configuring net if we have only one network device (#520146)
+  (rvykydal)
+- Do not mess value change with line formatting (#520146) (rvykydal)
+- Log change of ifcfg files by nm-c-e (#520146) (rvykydal)
+- Enable networking in stage 2 using nm-c-e (#520146) (rvykydal)
+- Write ifcfg files via NetworkDevice in Network.write() method (#520146)
+  (rvykydal)
+- Use ifcfg files via NetworkDevice in Network class (#520146) (rvykydal)
+- Use proper attribute instead of NetworkDevice 'DESC' hack (#520146)
+  (rvykydal)
+- Quote values when writing out to ifcfg files (#520146) (rvykydal)
+- Network.__str__() little cleanup (#520146) (rvykydal)
+- Use IfcfgFile class to back NetworkDevice objects (#520146) (rvykydal)
+- Move some consts to module globals for use in other places (#520146)
+  (rvykydal)
+- Add class for handling ifcfg files (#520146) (rvykydal)
+- logging: the ibft message once again. (akozumpl)
+- logging: no iBFT is not an error, fix spelling. (akozumpl)
+- logging: log loader messages with LOG_LOCAL1 syslog facility. (akozumpl)
+- logging: strip the extra newline in FCoE EDD log (akozumpl)
+- logging: remove references to "confirminstall" and "confirmupgrade" steps.
+  (akozumpl)
+- logging: remove all references to the "installtype" step. (akozumpl)
+- Determine if an mdmember is biosraid earlier (#586298) (hdegoede)
+- Set runlevel 5 based on the presence of both a display manager and X server.
+  (#588483) (notting)
+- Add "Serial Number" column to the right side of the cleardisks UI. (clumens)
+- Set permissions on initrd.addrsize to 0644 (#591455) (dcantrell)
+- fix compile error after 7aace0bf0e0557cd914aa93e80a709a9f21f07f8 (akozumpl)
+- autoconf: icons/ is missing makefiles (akozumpl)
+- new version of report wont start without /etc/report.conf (akozumpl)
+- Don't allow creating a new bootloader config in text mode (#580378).
+  (clumens)
+- Fix verification of DDs, we were looking for wrong path (#508242) (msivak)
+- Remove raid clone option and code (#587036) (hdegoede)
+- cleanup booty x86 flag.serial handling (#589773) (hdegoede)
+- isys/auditd was missing from .gitingore. (akozumpl)
+- bootloader timeout default should be None not 0 (jkeating)
+- Use iBFT if present and user didn't asked for anything else. (#590719)
+  (msivak)
+- storage: LUKSDevice takes req_grow after its slave (#589450). (akozumpl)
+- Correctly parse system-release (#590407) (lkundrak)
+- Offer to ignore unformatted DASDs rather than forcing exit (#580456)
+  (dcantrell)
+- Make Format and Resize checkboxes mutually exclusive (#589977) (dcantrell)
+- Fix usage of deviceNameToDiskByPath in devicetree.py (#589967) (dcantrell)
+- Advance line pointer & don't strdup(val) on error in readNetInfo (dcantrell)
+- Add non-branded default liveinst icons for anaconda (#588737) (dcantrell)
+- Add expanded=False to the base class's detailedMessageWindow as well.
+  (clumens)
+- Add all possible install class locations to the search path (#587696).
+  (clumens)
+- Use module reloading in driver disc operations (#590015) (msivak)
+- Use gtk consts instead of magic ints. (rvykydal)
+- Only initialize logging via a method, not with every import (#584054).
+  (akozumpl)
+- Remove the check for partitions (#508242) (msivak)
+- Close the dir descriptor after usage. (#589580) (msivak)
+- Remove partitions after unpartitioned non-partition devices. (#588597)
+  (dlehman)
+- Work around device node creation issues when creating EFI images. (#589680)
+  (pjones)
+- Clean up tabs in dispatch.py (bcl)
+- Just use /dev/dasdX if we can't get a by-path link (dcantrell)
+- Do not prepend /dev/disk/by-path in format DASD window (dcantrell)
+- Use udev_device_get_by_path() to get /dev/disk/by-path link (dcantrell)
+- Add udev_device_get_by_path() to return /dev/disk/by-path link (dcantrell)
+- Expand the details pane when showing unformatted DASDs (#580463) (dcantrell)
+- Log problem line if unquoting failed in readNetInfo() (dcantrell)
+- Update generic.ins for s390x (#546422) (dcantrell)
+- Rename geninitrdsz.c to addrsize.c (#546422) (dcantrell)
+- Generate initrd.addrsize file correctly for LPAR booting (#546422)
+  (dcantrell)
+- Only allow upgrading from one minor release of RHEL to another (#589052).
+  (clumens)
+- fcoe: use fipvlan instead of fcoemon to bring up fcoe (#486244) (hdegoede)
+- memory: increase the RAM limits, check for URL installs (#549653). (akozumpl)
+- memory: build auditd as a standalone binary and run it so (#549653).
+  (akozumpl)
+- gui: don't let metacity display the title right-click menu (#588642).
+  (akozumpl)
+
 * Wed May 05 2010 Chris Lumens <clumens@redhat.com> - 14.5-1
 - Link /sbin/reboot and /sbin/halt to /sbin/init on s390x (#571370) (dcantrell)
 - Don't clear bootloader radio selection on double click (#588771). (clumens)
