Tag tests as slow or acceptance tests and split full testing from devel unit testing

--- a/Makefile.am
+++ b/Makefile.am
@@ -106,4 +106,7 @@ archive-no-tag: dist
 
 # UNIT TESTING TARGETS
 unittest:
-	PYTHONPATH=tests/:pyanaconda:pyanaconda/isys/.libs:. nosetests -v -w tests/
+	PYTHONPATH=tests/:. nosetests -w tests/ -a \!acceptance,\!slow
+
+fulltest:
+	PYTHONPATH=tests/:. nosetests -w tests/
