spec: python-pyblock has to be in BuildRequires too.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -69,6 +69,7 @@ BuildRequires: newt-devel
 BuildRequires: pango-devel
 BuildRequires: pykickstart >= %{pykickstartver}
 BuildRequires: python-devel
+BuildRequires: python-pyblock >= %{pythonpyblockver}
 BuildRequires: python-urlgrabber >= 3.9.1-5
 BuildRequires: python-nose
 BuildRequires: rpm-devel
