--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -42,7 +42,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %define pythoncryptsetupver 0.0.6
 %define mehver 0.8
 %define sckeyboardver 1.3.1
-%define libblkid 2.17.1-1
+%define libblkidver 2.17.1-1
 %define fcoeutilsver 1.0.12-3.20100323git
 %define isomd5sumver 1.0.6
 
@@ -59,7 +59,7 @@ BuildRequires: libarchive-devel
 BuildRequires: libX11-devel
 BuildRequires: libXt-devel
 BuildRequires: libXxf86misc-devel
-BuildRequires: libblkid-devel >= %{liblkid}
+BuildRequires: libblkid-devel >= %{libblkidver}
 BuildRequires: libcurl-devel
 BuildRequires: libnl-devel >= %{libnlver}
 BuildRequires: libselinux-devel >= %{libselinuxver}
