translations: loader header files strings missing in anaconda.pot.
Related: rhbz#598413

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -66,6 +66,24 @@ iw/welcome_gui.py
 iw/zipl_gui.py
 
 # Loader source files
+loader/cdinstall.h
+loader/copy.h
+loader/dirbrowser.h
+loader/driverdisk.h
+loader/hdinstall.h
+loader/kbd.h
+loader/kickstart.h
+loader/lang.h
+loader/loader.h
+loader/mediacheck.h
+loader/method.h
+loader/modules.h
+loader/net.h
+loader/nfsinstall.h
+loader/telnetd.h
+loader/urlinstall.h
+loader/urls.h
+loader/windows.h
 loader/cdinstall.c
 loader/copy.c
 loader/dirbrowser.c
