Add test cases for proxy regex (#602712)
Check for proper operation of the proxy regex. The regex neeeds to be
copied over from yuminstall.py if it changes.

Related: rhbz#602712

--- a/configure.ac
+++ b/configure.ac
@@ -288,6 +288,7 @@ AC_CONFIG_FILES([Makefile
                  tests/Makefile
                  tests/storage/Makefile
                  tests/storage/devicelibs/Makefile
+                 tests/regex/Makefile
                  textw/Makefile
                  ui/Makefile
                  utils/Makefile])
