modules: fix getlangnames.
only here the import is done relatively, not through pyanaconda since that
pulls in isys which is not yet at the correct location during build-time
(and build thus fails).

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -32,5 +32,4 @@ dist_lang_DATA        = lang-table
 MAINTAINERCLEANFILES = Makefile.in
 
 lang-names: lang-table
-	PYTHONPATH="$(top_srcdir)/:$(top_srcdir)/isys/.libs" $(PYTHON) ../scripts/getlangnames.py > lang-names
-
+	PYTHONPATH="$(top_srcdir)/pyanaconda" $(PYTHON) ../scripts/getlangnames.py > lang-names
