Fix test suite Makefile.am files.
(1) Many tests have moved from foo.py to foo_test.py, so that needs changing
in the TESTS variable.

(2) Add a $PATH that includes /sbin and /usr/sbin so losetup and storage
commands work.

(3) Change PYTHONPATH to include new pyanaconda directory.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -20,3 +20,7 @@
 SUBDIRS = mock kickstart_test storage_test regex
 
 MAINTAINERCLEANFILES = Makefile.in
+
+TESTS_ENVIRONMENT = PATH=/sbin:/usr/sbin:$$PATH PYTHONPATH=$(top_builddir)/tests:$(top_builddir)/isys/.libs:$(top_builddir)/isys:$(top_builddir)/pyanaconda
+
+TESTS = fw_test.py
