--- a/tests/kickstart_test/Makefile.am
+++ b/tests/kickstart_test/Makefile.am
@@ -21,6 +21,6 @@ EXTRA_DIST = *.py
 
 MAINTAINERCLEANFILES = Makefile.in
 
-TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir)/isys/.libs:$(top_builddir)/isys:$(top_builddir)
+TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir)/tests:$(top_builddir)/isys/.libs:$(top_builddir)/pyanaconda:$(top_builddir)
 
-TESTS = commands.py
+TESTS = commands_test.py
